[gd_scene load_steps=12 format=3 uid="uid://csrivtkya2jvm"]

[ext_resource type="PackedScene" uid="uid://c5fr4x1ldxnj8" path="res://models/video-game-dummy-model-master/dummymale.glb" id="1_cfcxn"]
[ext_resource type="Script" path="res://dummymale_statemachine.gd" id="2_ctwwo"]
[ext_resource type="Script" path="res://area_3d.gd" id="3_l0nga"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dqm45"]
radius = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2ejko"]
radius = 0.468267
height = 1.68093

[sub_resource type="CylinderShape3D" id="CylinderShape3D_t555e"]
height = 2.47918

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ywm05"]
radius = 0.172252

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1dklv"]
radius = 0.172252

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_allea"]
radius = 0.197809
height = 1.0698

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f57v2"]
radius = 0.197809
height = 1.0698

[sub_resource type="SphereShape3D" id="SphereShape3D_ff2uw"]
radius = 10.0

[node name="dummymale" groups=["enemy"] instance=ExtResource("1_cfcxn")]
transform = Transform3D(-0.693359, 0, -8.80289e-08, 0, 0.515882, 0, 6.06154e-08, 0, -1.00693, 0, 0, 0)
script = ExtResource("2_ctwwo")

[node name="Armature" parent="." index="0" groups=["enemy"]]

[node name="Skeleton3D" parent="Armature" index="0" groups=["enemy"]]
bones/1/position = Vector3(-4.56358e-07, 3.52205e-08, 1.03363e-08)
bones/1/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(-0.0784214, -0.099535, 0.779159, 0.613884)
bones/6/rotation = Quaternion(0.0906731, -0.0775665, 0.523755, 0.843471)
bones/7/rotation = Quaternion(0.28915, 0.00457574, 0.0176661, 0.95711)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(-0.0540476, 0.105467, 0.197086, 0.973197)
bones/8/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-0.0784214, 0.099535, -0.779159, 0.613884)
bones/12/rotation = Quaternion(0.0906731, 0.0775665, -0.523755, 0.843471)
bones/13/rotation = Quaternion(0.28915, -0.00457574, -0.0176661, 0.95711)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(-0.0540476, -0.105467, -0.197086, 0.973197)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(5.32765e-08, 0.708542, 0.705668, 5.34935e-08)
bones/16/rotation = Quaternion(0.213909, 0.295406, 0.549408, 0.751751)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.903029, 0.0913552, -0.0721513, -0.413506)
bones/18/rotation = Quaternion(0.0225773, -0.00288887, 0.0342669, 0.999153)
bones/18/scale = Vector3(1, 1, 1)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(0.903029, -0.0913563, 0.0721509, -0.413505)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.0225788, 0.00288883, -0.0342691, 0.999153)
bones/21/scale = Vector3(1, 1, 1)
bones/23/position = Vector3(5.0512e-07, 8.59772e-08, -1.02843e-07)
bones/23/rotation = Quaternion(-0.313228, 0.08869, 0.909762, -0.257596)
bones/23/scale = Vector3(1, 1, 1)

[node name="Headbone" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3186, 0)
bone_name = "Head"
bone_idx = 10

[node name="Area3D" type="Area3D" parent="Armature/Skeleton3D/Headbone" index="0" groups=["enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("3_l0nga")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/Headbone/Area3D" index="0"]
transform = Transform3D(0.681606, 0, 0, 0, 1, 0, 0, 0, 0.676371, -1.11022e-16, 0.259905, 0.0582322)
shape = SubResource("SphereShape3D_dqm45")

[node name="spine bone" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.288561, 0)
bone_name = "Spine.001"
bone_idx = 3

[node name="Area3D" type="Area3D" parent="Armature/Skeleton3D/spine bone" index="0" groups=["enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("3_l0nga")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/spine bone/Area3D" index="0"]
transform = Transform3D(0.681606, 0, 0, 0, 0.771078, 0.0450021, 0, -0.0857272, 0.404774, 2.14062e-17, 0.297971, 0.0113363)
shape = SubResource("CapsuleShape3D_2ejko")

[node name="pelvis" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.150207, 0)
bone_name = "Spine"
bone_idx = 2

[node name="Area3D" type="Area3D" parent="Armature/Skeleton3D/pelvis" index="0" groups=["enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("3_l0nga")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/pelvis/Area3D" index="0"]
transform = Transform3D(0.681606, 0, 0, 0, 0.156992, -0.0829748, 0, 0.0263166, 0.494989, -1.51347e-16, -0.0169573, 0.079214)
shape = SubResource("CylinderShape3D_t555e")

[node name="leg_left" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="3"]
transform = Transform3D(-0.0213844, 0.0441123, 0.998798, -0.0943955, -0.994652, 0.0419082, 0.995305, -0.0933859, 0.0254341, 0.207246, 0.0415722, 0.0895028)
bone_name = "Thigh.L"
bone_idx = 17

[node name="Area3D" type="Area3D" parent="Armature/Skeleton3D/leg_left" index="0" groups=["enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("3_l0nga")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/leg_left/Area3D" index="0"]
transform = Transform3D(0.181303, -0.0133493, -0.48364, -0.00095951, 0.516255, -0.0136529, 0.65705, 0.00443724, 0.133433, -0.0135765, 0.503194, -0.0147209)
shape = SubResource("CapsuleShape3D_ywm05")

[node name="right leg" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="4"]
transform = Transform3D(-0.0213848, -0.04411, -0.998798, 0.0943934, -0.994653, 0.0419059, -0.995305, -0.0933838, 0.0254343, -0.207246, 0.0415722, 0.0895029)
bone_name = "Thigh.R"
bone_idx = 20

[node name="Area3D" type="Area3D" parent="Armature/Skeleton3D/right leg" index="0" groups=["enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("3_l0nga")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/right leg/Area3D" index="0"]
transform = Transform3D(0.641693, -0.00756777, 0.169065, 0.0170545, 0.516104, -0.0132789, -0.229185, 0.0172166, 0.472376, 0.00168999, 0.483315, -0.0166897)
shape = SubResource("CapsuleShape3D_1dklv")

[node name="right arm upper" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="5"]
transform = Transform3D(-0.983453, -0.154744, 0.0942031, 0.181163, -0.840039, 0.511385, 5.92903e-07, 0.519989, 0.854173, -0.545953, 0.609223, -0.136102)
bone_name = "Forearm.R"
bone_idx = 7

[node name="Area3D" type="Area3D" parent="Armature/Skeleton3D/right arm upper" index="0" groups=["enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("3_l0nga")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/right arm upper/Area3D" index="0"]
transform = Transform3D(0.679745, 0.0349253, 0.0148726, -0.0477616, 0.382382, 0.335514, 0.0158589, -0.345371, 0.372972, -0.0109468, -0.266393, 0.207706)
shape = SubResource("CapsuleShape3D_allea")

[node name="left arm upper" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="6"]
transform = Transform3D(-0.983453, 0.154744, -0.0942031, -0.181163, -0.840039, 0.511385, -5.92903e-07, 0.519989, 0.854173, 0.545953, 0.609223, -0.136102)
bone_name = "Forearm.L"
bone_idx = 13

[node name="Area3D" type="Area3D" parent="Armature/Skeleton3D/left arm upper" index="0" groups=["enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("3_l0nga")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/left arm upper/Area3D" index="0"]
transform = Transform3D(0.634776, -0.0454799, 0.177399, -0.0898889, 0.425035, 0.277308, -0.231442, -0.289816, 0.378852, 0.0126919, -0.2746, 0.185265)
shape = SubResource("CapsuleShape3D_f57v2")

[node name="MaleDummy" parent="Armature/Skeleton3D" index="7" groups=["enemy"]]

[node name="RayCast3D" type="RayCast3D" parent="Armature/Skeleton3D" index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25183, 0.276639)
target_position = Vector3(0, 0, 10)

[node name="sight_range" type="Area3D" parent="Armature/Skeleton3D" index="9"]
transform = Transform3D(1, 0, 0, 0, 0.957597, 0, 0, 0, 1, 0, -0.00696911, 0)
visible = false
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/sight_range" index="0"]
shape = SubResource("SphereShape3D_ff2uw")
disabled = true

[node name="eyes" type="Node3D" parent="." index="2"]

[node name="Timer" type="Timer" parent="." index="3"]

[connection signal="body_part_hit" from="Armature/Skeleton3D/Headbone/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="Armature/Skeleton3D/spine bone/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="Armature/Skeleton3D/pelvis/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="Armature/Skeleton3D/leg_left/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="Armature/Skeleton3D/right leg/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="Armature/Skeleton3D/right arm upper/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_part_hit" from="Armature/Skeleton3D/left arm upper/Area3D" to="." method="_on_area_3d_body_part_hit"]
[connection signal="body_entered" from="Armature/Skeleton3D/sight_range" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="Armature/Skeleton3D/sight_range" to="." method="_on_sight_range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
